ocplib-json-typed -> json-data-encoding

--- a/iso4217.opam
+++ b/iso4217.opam
@@ -12,11 +12,11 @@ doc: "https://url/to/documentation"
 bug-reports: "https://github.com/deepmarker/ocaml-iso4217/issues"
 depends: [
   "ocaml"
-  "dune" {>= "3.5"}
+  "dune" {>= "3.21"}
   "base" {>= "v0.17.1"}
   "sexplib" {>= "v0.17.0"}
   "bin_prot" {>= "v0.17.0"}
-  "ocplib-json-typed" {>= "0.7.1"}
+  "json-data-encoding" {>= "1.1.1"}
   "pla" {build}
   "ezxmlm" {build}
   "odoc" {with-doc}
@@ -36,3 +36,4 @@ build: [
   ]
 ]
 dev-repo: "git+https://github.com/deepmarker/ocaml-iso4217.git"
+x-maintenance-intent: ["(latest)"]
